feat: comprehensive project enhancement and component system implementation
🎨 UI/UX Improvements:
- Enhanced back button in GuideHeader with professional SVG icon and smooth animations
- Added backdrop filter effects and improved hover states
- Implemented consistent styling across all interactive controls

📁 New File Structure:
- Created src/types/controls/ with separated type definitions:
  * base.ts - Common interfaces and base types
  * circle.ts, polygon.ts, polyline.ts - Component-specific types
  * marker.ts, infoWindow.ts, rectangle.ts, googleMap.ts - Additional control types
- Added src/components/controls/ for reusable control components
- Created comprehensive components-guide system with 60+ new files

🔧 New Components:
- InteractiveFormControls: Reusable form control component supporting all map control types
- GuideLayout: Full-screen layout for guide pages
- CodeBlock: Syntax highlighting component with Prism.js
- Saudi Logistics components: AnimatedTruckMarker, SmartRouteComparison, TruckDetailInfoWindow
- Complete guide system: CircleGuide, PolygonGuide, PolylineGuide, MarkerGuide, etc.

📊 Data & Constants:
- Centralized guide data files for each component type
- Shared constants for UI, common values, and configuration
- Comprehensive props documentation and best practices data

🎮 Interactive Features:
- Interactive control panels for all map components
- Real-time property adjustment and visual feedback
- Code examples with syntax highlighting
- Task-based learning system with difficulty levels

🔄 Architecture Improvements:
- Separated concerns with dedicated type files
- Eliminated code duplication across components
- Improved TypeScript support with proper type exports
- Enhanced routing system supporting both regular and guide layouts

📦 Dependencies:
- Added prismjs for code syntax highlighting
- Added @types/prismjs for TypeScript support

🚀 New Pages:
- BasicComponentsDemo and CustomComponentsDemo
- Complete components guide with navigation


--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@types/googlemaps": "^3.43.3",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
+    "@types/prismjs": "^1.26.5",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@types/react-router-dom": "^5.3.3",
+    "prismjs": "^1.30.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.7.1",
